--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^3.0.2",
     "@craco/craco": "^6.2.0",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
@@ -11,11 +12,19 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
+    "ckeditor5-build-classic-mathtype": "^1.0.0",
     "heroicons-react": "^1.4.1",
+    "html-react-parser": "^1.3.0",
+    "mathjax-full": "^3.2.0",
     "react": "^17.0.2",
+    "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
+    "react-mathjax": "^1.0.1",
+    "react-mathjax-preview": "^0.1.15",
+    "react-mathjax2": "^0.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "simple-react-mathjax": "^0.2.7",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
