--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ckeditor5-build-classic-mathtype": "^1.0.0",
     "heroicons-react": "^1.4.1",
     "html-react-parser": "^1.3.0",
+    "jquery": "^3.6.0",
     "mathjax-full": "^3.2.0",
     "react": "^17.0.2",
     "react-countdown": "^2.3.2",
